suppressed -Xlint:try warnings